글 여러개 한번에 불러오기 기능 article/getarticles

--- a/build.gradle
+++ b/build.gradle
@@ -23,3 +23,15 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+//jar {
+//    manifest {
+//        attributes 'Main-Class': 'kr.goldenmine.FlowerserverApplication'
+//    }
+//
+//    from {
+//        configurations.implementation.collect { it.isDirectory() ? it : zipTree(it) }
+//    }
+//}
+
+
