--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     implementation 'com.google.code.gson:gson:2.9.0'
-    implementation 'commons-io:commons:io:2.11.0'
+//    implementation 'commons-io:commons-io:2.11.0'
 }
 
 tasks.named('test') {
