--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.servlet.multipart.max-request-size=215MB
 # ?? ??? ????
 # ???? ??? ???? ?? ???
 file.upload-dir=./images
+
+server.servlet.session.timeout= 1d
